--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Prueba</h1>
-    <a href="./imagenes.html"></a>
+    <a href="./imagenes.html">Imagenes</a>
 </body>
 </html>
