--- a/imagenes.html
+++ b/imagenes.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Imagenes</h1>
-    <a href="./index.html">Imagenes</a>
+    <a href="./index.html">Home</a>
 </body>
 </html>
